@@ -1,7 +1,8 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 /**
- * Graph of concentration on a logarithmic scale.
+ * Graph with a logarithmic scale, for displaying concentration (mol/L) and quantity (moles).
+ * Assumes that graphing concentration and quantity can be graphed on the same scale.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -9,6 +10,7 @@ define( function( require ) {
   'use strict';
 
   // imports
+  var GraphUnits = require( 'PH_SCALE/common/view/graph/GraphUnits' );
   var H2OIndicatorNode = require( 'PH_SCALE/common/view/graph/H2OIndicatorNode' );
   var H3OIndicatorNode = require( 'PH_SCALE/common/view/graph/H3OIndicatorNode' );
   var HTMLText = require( 'SCENERY/nodes/HTMLText' );
@@ -25,10 +27,11 @@ define( function( require ) {
 
   /**
    * @param {Solution} solution
+   * @param {GraphUnits} graphUnits
    * @param {*} options
    * @constructor
    */
-  function LogConcentrationGraph( solution, options ) {
+  function LogConcentrationGraph( solution, graphUnits, options ) {
 
     options = _.extend( {
       isInteractive: false,
@@ -55,7 +58,7 @@ define( function( require ) {
     Node.call( thisNode );
 
     // background for the scale, width sized to fit
-    var widestTickLabel = createTickLabel( PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.min, options.majorTickFont );
+    var widestTickLabel = createTickLabel( PHScaleConstants.LOGARITHMIC_EXPONENT_RANGE.min, options.majorTickFont );
     var scaleWidth = Math.max( options.minScaleWidth, widestTickLabel.width + ( 2 * options.majorTickXSpacing ) + ( 2 * options.majorTickLength ) );
     var backgroundNode = new Rectangle( 0, 0, scaleWidth, options.scaleHeight, options.scaleCornerRadius, options.scaleCornerRadius, {
       fill: new LinearGradient( 0, 0, 0, options.scaleHeight ).addColorStop( 0, 'rgb(200,200,200)' ).addColorStop( 1, 'white' ),
@@ -66,14 +69,14 @@ define( function( require ) {
 
     //TODO take advantage of DAG to reuse tick line nodes
     // tick marks
-    var numberOfMajorTicks = ( PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.getLength() / 2 ) + 1; // every-other exponent
+    var numberOfMajorTicks = ( PHScaleConstants.LOGARITHMIC_EXPONENT_RANGE.getLength() / 2 ) + 1; // every-other exponent
     var ySpacing = ( options.scaleHeight - ( 2 * options.scaleYMargin ) ) / ( numberOfMajorTicks - 1 ); // vertical space between ticks
     var majorLabel, majorLineLeft, majorLineRight, minorLineLeft, minorLineRight;
     for ( var i = 0; i < numberOfMajorTicks; i++ ) {
       // major lines and label
       majorLineLeft = new Line( 0, 0, options.majorTickLength, 0, { stroke: options.majorTickStroke, lineWidth: options.majorTickLineWidth } );
       majorLineRight = new Line( 0, 0, options.majorTickLength, 0, { stroke: options.majorTickStroke, lineWidth: options.majorTickLineWidth } );
-      majorLabel = createTickLabel( PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.max - ( 2 * i ), options.majorTickFont );
+      majorLabel = createTickLabel( PHScaleConstants.LOGARITHMIC_EXPONENT_RANGE.max - ( 2 * i ), options.majorTickFont );
       // rendering order
       thisNode.addChild( majorLineLeft );
       thisNode.addChild( majorLineRight );
@@ -102,16 +105,16 @@ define( function( require ) {
     }
 
     // indicators & associated properties
-    var concentrationH2OProperty = new Property( null );
-    var concentrationH3OProperty = new Property( null );
-    var concentrationOHProperty = new Property( null );
-    var h2OIndicatorNode = new H2OIndicatorNode( concentrationH2OProperty, {
+    var valueH2OProperty = new Property( null );
+    var valueH3OProperty = new Property( null );
+    var valueOHProperty = new Property( null );
+    var h2OIndicatorNode = new H2OIndicatorNode( valueH2OProperty, {
       x: backgroundNode.right - options.majorTickLength / 2 } );
-    var h3OIndicatorNode = new H3OIndicatorNode( concentrationH3OProperty, {
+    var h3OIndicatorNode = new H3OIndicatorNode( valueH3OProperty, {
       x: backgroundNode.left + options.majorTickLength / 2,
       handleVisible: options.isInteractive,
       shadowVisible: options.isInteractive } );
-    var oHIndicatorNode = new OHIndicatorNode( concentrationOHProperty, {
+    var oHIndicatorNode = new OHIndicatorNode( valueOHProperty, {
       x: backgroundNode.right - options.majorTickLength / 2,
       handleVisible: options.isInteractive,
       shadowVisible: options.isInteractive } );
@@ -128,8 +131,8 @@ define( function( require ) {
       else {
         // between the top and bottom tick
         var maxHeight = ( options.scaleHeight - 2 * options.scaleYMargin );
-        var maxExponent = PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.max;
-        var minExponent = PHScaleConstants.CONCENTRATION_EXPONENT_RANGE.min;
+        var maxExponent = PHScaleConstants.LOGARITHMIC_EXPONENT_RANGE.max;
+        var minExponent = PHScaleConstants.LOGARITHMIC_EXPONENT_RANGE.min;
         var valueExponent = Util.log10( value );
         return options.scaleYMargin + maxHeight - ( maxHeight * ( valueExponent - minExponent ) / ( maxExponent - minExponent ) );
       }
@@ -137,20 +140,31 @@ define( function( require ) {
 
     // Update the indicators
     var updateIndicators = function() {
-      var concentrationH2O = solution.getConcentrationH2O();
-      var concentrationH3O = solution.getConcentrationH3O();
-      var concentrationOH = solution.getConcentrationOH();
+      var valueH2O, valueH3O, valueOH;
+      if ( graphUnits.get() === GraphUnits.MOLES_PER_LITER ) {
+        // concentration
+        valueH2O = solution.getConcentrationH2O();
+        valueH3O = solution.getConcentrationH3O();
+        valueOH = solution.getConcentrationOH();
+      }
+      else {
+        // quantity
+        valueH2O = solution.getMolesH2O();
+        valueH3O = solution.getMolesH3O();
+        valueOH = solution.getMolesOH();
+      }
       // move indicators
-      h2OIndicatorNode.y = computeIndicatorY( concentrationH2O );
-      h3OIndicatorNode.y = computeIndicatorY( concentrationH3O );
-      oHIndicatorNode.y = computeIndicatorY( concentrationOH );
+      h2OIndicatorNode.y = computeIndicatorY( valueH2O );
+      h3OIndicatorNode.y = computeIndicatorY( valueH3O );
+      oHIndicatorNode.y = computeIndicatorY( valueOH );
       // update indicator values
-      concentrationH2OProperty.set( concentrationH2O );
-      concentrationH3OProperty.set( concentrationH3O );
-      concentrationOHProperty.set( concentrationOH );
+      valueH2OProperty.set( valueH2O );
+      valueH3OProperty.set( valueH3O );
+      valueOHProperty.set( valueOH );
     };
     solution.pHProperty.link( updateIndicators.bind( thisNode ) );
     solution.volumeProperty.link( updateIndicators.bind( thisNode ) );
+    graphUnits.link( updateIndicators.bind( thisNode ) );
 
     if ( options.isInteractive ) {
       //TODO add interactivity for H3O and OH indicators
